test/fail/integration/_fail_grammar_expr_and_2.hs
x :: Bool
x = True && jl
main = print "hello"